--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,8 +6,6 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-# encoding_rs = { version = "0.8", optional = true }
+bitvec = "*"
 
 [features]
-default = []
-# kanji = ["encoding_rs"]
